# embedded80211_serial

./: AGENTS.md  CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
boards/: nrf7002-dk.overlay
cli_test/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
cli_test/src/: main.rs  protocol.rs
docs/: data_flow.puml  flow.puml  mcu_component.puml  protoviz_v1.json  receive_flow.puml  serial-bus-link.mmd
linux/: AGENTS.md
protos/: network_interface.proto  wifi.options  wifi.proto
src/: config.c  main.c  process_requests.c  proxy.h  uart.c  wifi_data.c  wifi_mgmt_proxy.c  wifi_mgmt_proxy.h
src/serial/: CMakeLists.txt  Kconfig  serial.c  serial.h  serial_usb.c  uart.c
zephyr/: AGENTS.md  CMakeLists.txt  Kconfig  LICENSE  README.md  app.overlay  prj.conf  protocol.sh  sample.yaml
zephyr/docs/: mcu_component.puml
zephyr/protos/: network_interface.options  wifi.options  wifi.proto
zephyr/src/: bt_proxy.c  bt_proxy.h  config.c  main.c  net_if_mgmt_proxy.c  net_if_mgmt_proxy.h  ot_proxy.c  vserial.c  vserial.h  wifi_data.c  wifi_data.h  wifi_mgmt_proxy.c  wifi_mgmt_proxy.h
zephyr/src/serial/: CMakeLists.txt  Kconfig  serial.c  serial.h  serial_usb.c  uart.c
zephyr/tests/: CMakeLists.txt  INDEX.md  QUICKSTART.md  README.md  TEST_REFERENCE.md  app.overlay  build_tests.sh  error_handling_test.c  frame_parser_test.c  prj.conf  protocol_test.c  run_tests.sh  sequence_number_test.c
